Fix flexbox alignment

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -202,8 +202,6 @@ body.auth {
   }
 
   .align-right {
-    align-self: flex-end;
-
     .nav-tabs{
       margin-top: 4px; // balance active border-bottom
 
@@ -274,9 +272,9 @@ footer {
 
 .project-actions {
   .btn-sm {
-    font-size: 14px;
+    font-size: 13px;
     margin-left: 7px;
-    line-height: 22px;
+    line-height: 21px;
   }
 
   .icon {
@@ -296,7 +294,7 @@ footer {
     }
 
     &.icon-settings  {
-      top: 1px;
+      top: 2px;
       font-size: 15px;
     }
 
